kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/constraintchecker_tests/invalid/025_weaving_in_kermeta_aspect8b.kmt
/* $Id: 025_weaving_in_kermeta_aspect8b.kmt,v 1.1 2008-02-05 12:32:46 dvojtise Exp $ */

// Type checking of kermeta weavinf

package weavinginvalidtest7;


require kermeta
require "025_weaving_in_kermeta_aspect8/025_weaving_in_kermeta_aspect8_baseClass.kmt"

using kermeta::standard



@aspect "true"
class A {
	operation amethod() : B is do // must fail here because of the bad return type problem
		result := B.new
	end

}

class B{
}

/* END OF FILE */